Moving ongoing development to GitHub