@@ -1,5 +1,5 @@
 /*
-**    Copyright (C) 2003-2014 Institute for Systems Biology 
+**    Copyright (C) 2003-2017 Institute for Systems Biology 
 **                            Seattle, Washington, USA. 
 **
 **    This library is free software; you can redistribute it and/or
@@ -48,14 +48,16 @@ import javax.swing.event.ChangeListener;
 import javax.swing.table.DefaultTableCellRenderer;
 import javax.swing.table.TableColumn;
 
-import org.systemsbiology.biotapestry.app.BTState;
+import org.systemsbiology.biotapestry.app.UIComponentSource;
 import org.systemsbiology.biotapestry.cmd.undo.TimeCourseChangeCmd;
 import org.systemsbiology.biotapestry.db.DataAccessContext;
 import org.systemsbiology.biotapestry.db.TimeAxisDefinition;
 import org.systemsbiology.biotapestry.event.GeneralChangeEvent;
 import org.systemsbiology.biotapestry.timeCourse.ExpressionEntry;
+import org.systemsbiology.biotapestry.timeCourse.GeneTemplateEntry;
 import org.systemsbiology.biotapestry.timeCourse.TimeCourseChange;
 import org.systemsbiology.biotapestry.timeCourse.TimeCourseData;
+import org.systemsbiology.biotapestry.timeCourse.TimeCourseDataMaps;
 import org.systemsbiology.biotapestry.timeCourse.TimeCourseGene;
 import org.systemsbiology.biotapestry.ui.dialogs.utils.DialogSupport;
 import org.systemsbiology.biotapestry.ui.dialogs.utils.EditableTable;
@@ -63,12 +65,14 @@ import org.systemsbiology.biotapestry.util.ChoiceContent;
 import org.systemsbiology.biotapestry.util.DataUtil;
 import org.systemsbiology.biotapestry.util.DoubleEditor;
 import org.systemsbiology.biotapestry.util.EnumCell;
+import org.systemsbiology.biotapestry.util.EnumChoiceContent;
 import org.systemsbiology.biotapestry.util.FixedJButton;
 import org.systemsbiology.biotapestry.util.ProtoDouble;
 import org.systemsbiology.biotapestry.util.ResourceManager;
 import org.systemsbiology.biotapestry.util.TrackingDoubleRenderer;
 import org.systemsbiology.biotapestry.util.TrackingUnit;
 import org.systemsbiology.biotapestry.util.UiUtil;
+import org.systemsbiology.biotapestry.util.UndoFactory;
 import org.systemsbiology.biotapestry.util.UndoSupport;
 
 /****************************************************************************
@@ -84,18 +88,19 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
   //
   ////////////////////////////////////////////////////////////////////////////  
 
-  private HashMap tabData_;
-  private BTState appState_;
+  private HashMap<String, TabData> tabData_;
   private DataAccessContext dacx_;
+  private UIComponentSource uics_;
+  private UndoFactory uFac_;
   private boolean advanced_;
   private FixedJButton buttonAdv_;
   private JTabbedPane tabPane_;
-  private HashMap tabMap_;
+  private HashMap<Integer, TabData> tabMap_;
   private TabData tdatf_;
-  private ArrayList confidenceEnum_;
-  private ArrayList expressEnum_;
-  private ArrayList sourceEnum_;
-  private ArrayList stratEnum_;
+  private ArrayList<EnumCell> confidenceEnum_;
+  private ArrayList<EnumCell> expressEnum_;
+  private ArrayList<EnumChoiceContent<ExpressionEntry.Source>> sourceEnum_;
+  private ArrayList<EnumCell> stratEnum_;
   
   private static final long serialVersionUID = 1L;
   
@@ -107,16 +112,18 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
 
   /***************************************************************************
   **
-  ** Constructor 
+  ** Constructor. Needs casting work! List of mappedIDs is either <TimeCourseDataMaps.TCMapping> OR <String>
   */ 
   
-  public TimeCourseEntryDialog(BTState appState, DataAccessContext dacx, List mappedIDs, boolean doForTable) {     
-    super(appState.getTopFrame(), appState.getRMan().getString("tcentry.title"), true);
-    appState_ = appState;
+  public TimeCourseEntryDialog(UIComponentSource uics, DataAccessContext dacx, 
+                               List mappedIDs, boolean doForTable, UndoFactory uFac) {     
+    super(uics.getTopFrame(), dacx.getRMan().getString("tcentry.title"), true);
+    uics_ = uics;
     dacx_ = dacx;
+    uFac_ = uFac;
     advanced_ = false;
         
-    ResourceManager rMan = appState_.getRMan();    
+    ResourceManager rMan = dacx_.getRMan();    
     setSize(850, 750);
     JPanel cp = (JPanel)getContentPane();
     cp.setBorder(new EmptyBorder(20, 20, 20, 20));
@@ -132,14 +139,14 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
     // Build the values table tabs.
     //
 
-    tabData_ = new HashMap();
-    tabMap_ = new HashMap();
+    tabData_ = new HashMap<String, TabData>();
+    tabMap_ = new HashMap<Integer, TabData>();
     if (!doForTable) {
       tabPane_ = new JTabbedPane();      
-      Iterator midit = mappedIDs.iterator();
+      Iterator<TimeCourseDataMaps.TCMapping> midit = (Iterator<TimeCourseDataMaps.TCMapping>)mappedIDs.iterator();
       int index = 0;
       while (midit.hasNext()) {
-        TimeCourseData.TCMapping tcm = (TimeCourseData.TCMapping)midit.next();
+        TimeCourseDataMaps.TCMapping tcm = midit.next();
         TabData tdat = buildATab(tcm.name, false);
         tabData_.put(tcm.name, tdat);
         if (tdatf_ == null) {
@@ -154,9 +161,9 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
         public void stateChanged(ChangeEvent ev) {
           try {     
             stopTheEditing(false);
-            tdatf_ = (TabData)tabMap_.get(new Integer(tabPane_.getSelectedIndex()));
+            tdatf_ = tabMap_.get(Integer.valueOf(tabPane_.getSelectedIndex()));
           } catch (Exception ex) {
-            appState_.getExceptionHandler().displayException(ex);
+            uics_.getExceptionHandler().displayException(ex);
           }
         }
       });
@@ -179,14 +186,14 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
         try {
           toggleAdvanced();
         } catch (Exception ex) {
-          appState_.getExceptionHandler().displayException(ex);
+          uics_.getExceptionHandler().displayException(ex);
         }
       }
     });    
    
-    DialogSupport ds = new DialogSupport(this, appState_, gbc);
+    DialogSupport ds = new DialogSupport(this, uics_, dacx_, gbc);
     ds.buildAndInstallButtonBoxWithExtra(cp, 10, 1, true, buttonAdv_, false); 
-    setLocationRelativeTo(appState_.getTopFrame());
+    setLocationRelativeTo(uics_.getTopFrame());
     displayProperties();
   }
   
@@ -236,7 +243,7 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
   */ 
   
   private TabData buildATab(String mappedID, boolean doForTable) {       
-    ResourceManager rMan = appState_.getRMan();    
+    ResourceManager rMan = dacx_.getRMan();    
     GridBagConstraints gbc = new GridBagConstraints();
 
     TabData tdat = new TabData();
@@ -253,14 +260,14 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
     UiUtil.gbcSet(gbc, 0, 0, 10, 1, UiUtil.BO, 0, 0, 5, 5, 5, 5, UiUtil.CEN, 1.0, 0.0);
     tdat.panel.add(tcGeneControls, gbc);  
               
-    tdat.est = new EditableTable(appState_, new TimeCourseTableModel(appState_, tdat), appState_.getTopFrame());
+    tdat.est = new EditableTable(uics_, dacx_, new TimeCourseTableModel(uics_, dacx_, tdat), uics_.getTopFrame());
     EditableTable.TableParams etp = new EditableTable.TableParams();
     etp.buttons = EditableTable.NO_BUTTONS;
     etp.singleSelectOnly = true;
     etp.tableIsUnselectable = false;
     etp.perColumnEnums = new HashMap<Integer, EditableTable.EnumCellInfo>();
-    etp.perColumnEnums.put(new Integer(TimeCourseTableModel.VALUE), new EditableTable.EnumCellInfo(false, expressEnum_));
-    etp.perColumnEnums.put(new Integer(TimeCourseTableModel.CONFIDENCE), new EditableTable.EnumCellInfo(false, confidenceEnum_));
+    etp.perColumnEnums.put(new Integer(TimeCourseTableModel.VALUE), new EditableTable.EnumCellInfo(false, expressEnum_, EnumCell.class));
+    etp.perColumnEnums.put(new Integer(TimeCourseTableModel.CONFIDENCE), new EditableTable.EnumCellInfo(false, confidenceEnum_, EnumCell.class));
     List valList = ((TimeCourseTableModel)tdat.est.getModel()).getValueColumn();
     HashMap<Integer, TrackingUnit> tdrxMap = new HashMap<Integer, TrackingUnit>();
     int[] enableSource = new int[] {ExpressionEntry.EXPRESSED, ExpressionEntry.WEAK_EXPRESSION, ExpressionEntry.VARIABLE};
@@ -272,15 +279,15 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
     TrackingUnit tus = new TrackingUnit.ListTrackingMultiValUnit(valList, enableStrat);
     tdrxMap.put(new Integer(TimeCourseTableModel.START_STRAT), tus);
     tdrxMap.put(new Integer(TimeCourseTableModel.END_STRAT), tus);
-    etp.perColumnEnums.put(new Integer(TimeCourseTableModel.SOURCE), new EditableTable.EnumCellInfo(false, sourceEnum_, tdrxMap));
-    etp.perColumnEnums.put(new Integer(TimeCourseTableModel.STRAT_SOURCE), new EditableTable.EnumCellInfo(false, sourceEnum_, tdrxMap));
-    etp.perColumnEnums.put(new Integer(TimeCourseTableModel.START_STRAT), new EditableTable.EnumCellInfo(false, stratEnum_, tdrxMap));
-    etp.perColumnEnums.put(new Integer(TimeCourseTableModel.END_STRAT), new EditableTable.EnumCellInfo(false, stratEnum_, tdrxMap));   
+    etp.perColumnEnums.put(new Integer(TimeCourseTableModel.SOURCE), new EditableTable.EnumCellInfo(false, sourceEnum_, tdrxMap, EnumChoiceContent.class));
+    etp.perColumnEnums.put(new Integer(TimeCourseTableModel.STRAT_SOURCE), new EditableTable.EnumCellInfo(false, sourceEnum_, tdrxMap, EnumChoiceContent.class));
+    etp.perColumnEnums.put(new Integer(TimeCourseTableModel.START_STRAT), new EditableTable.EnumCellInfo(false, stratEnum_, tdrxMap, EnumCell.class));
+    etp.perColumnEnums.put(new Integer(TimeCourseTableModel.END_STRAT), new EditableTable.EnumCellInfo(false, stratEnum_, tdrxMap, EnumCell.class));   
     JPanel tablePan = tdat.est.buildEditableTable(etp);     
     tu = new TrackingUnit.ListTrackingUnit(valList, ExpressionEntry.VARIABLE);
     HashMap tdrMap = new HashMap();
     tdrMap.put(new Integer(TimeCourseTableModel.ACTIVITY), tu);   
-    tdat.est.getTable().setDefaultRenderer(ProtoDouble.class, new TrackingDoubleRenderer(tdrMap, appState_));
+    tdat.est.getTable().setDefaultRenderer(ProtoDouble.class, new TrackingDoubleRenderer(tdrMap, uics_.getHandlerAndManagerSource()));
     // FIX ME, MAKE AVAILABLE FROM SUPERCLASS   
     ((DefaultTableCellRenderer)tdat.est.getTable().getDefaultRenderer(String.class)).setHorizontalAlignment(JLabel.CENTER);
   
@@ -308,8 +315,8 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
     
     if (tdat.gene == null) {
       tdat.isNew = true;
-      Iterator template = tcd.getGeneTemplate();
-      tdat.gene = new TimeCourseGene(appState_, mappedID, template);
+      Iterator<GeneTemplateEntry> template = tcd.getGeneTemplate();
+      tdat.gene = new TimeCourseGene(dacx_, mappedID, template);
     } else {
       tdat.isNew = false;
     }
@@ -323,7 +330,7 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
           ece.revalidate();
           forButton.est.getModel().fireTableDataChanged();
         } catch (Exception ex) {
-          appState_.getExceptionHandler().displayException(ex);
+          uics_.getExceptionHandler().displayException(ex);
         }
       }
     });
@@ -390,22 +397,22 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
   ** Apply the data to the model
   */ 
   
-  private boolean applyGeneData(TimeCourseData tcd, TabData tdat, UndoSupport support) {
+  private boolean applyGeneData(TimeCourseData tcd, TimeCourseDataMaps tcdm, TabData tdat, UndoSupport support) {
     if (tdat.nameField != null) {
       String currName = tdat.gene.getName();
       String newName = tdat.nameField.getText().trim();
       if (!newName.equals(currName)) {
         if (newName.equals("")) {
-          ResourceManager rMan = appState_.getRMan();
-          JOptionPane.showMessageDialog(appState_.getTopFrame(), 
+          ResourceManager rMan = dacx_.getRMan();
+          JOptionPane.showMessageDialog(uics_.getTopFrame(), 
                                         rMan.getString("tcentry.nameBlank"), 
                                         rMan.getString("tcentry.nameBlankTitle"),
                                         JOptionPane.ERROR_MESSAGE);
           return (false);
         }        
         if (!tcd.nameIsUnique(newName)) {
-          ResourceManager rMan = appState_.getRMan();
-          JOptionPane.showMessageDialog(appState_.getTopFrame(), 
+          ResourceManager rMan = dacx_.getRMan();
+          JOptionPane.showMessageDialog(uics_.getTopFrame(), 
                                         rMan.getString("tcentry.nameNotUnique"), 
                                         rMan.getString("tcentry.nameNotUniqueTitle"),
                                         JOptionPane.ERROR_MESSAGE);
@@ -417,35 +424,35 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
         // association, we let user choose how to handle it:
         //
         if (!DataUtil.keysEqual(newName, currName)) {        
-          Set nodes = tcd.getTimeCourseDataKeyInverses(currName);
+          Set<String> nodes = tcdm.getTimeCourseDataKeyInverses(currName);
           if (!nodes.isEmpty()) {
             //
             // We need to study the set of associated nodes.  Some may be default 
             // associated by name, others may be associated by custom map.
             //
             boolean haveDefault = false;
-            Iterator nit = nodes.iterator();
+            Iterator<String> nit = nodes.iterator();
             while (nit.hasNext()) {
-              String nid = (String)nit.next();
-              if (!tcd.haveCustomMapForNode(nid)) {
+              String nid = nit.next();
+              if (!tcdm.haveCustomMapForNode(nid)) {
                 haveDefault = true;
                 break;
               }
             }
             if (haveDefault) {
-              ResourceManager rMan = appState_.getRMan();
+              ResourceManager rMan = dacx_.getRMan();
               String desc = MessageFormat.format(rMan.getString("dataTables.disconnecting"), 
                                                  new Object[] {currName, newName});
-              JOptionPane.showMessageDialog(appState_.getTopFrame(), desc, 
+              JOptionPane.showMessageDialog(uics_.getTopFrame(), desc, 
                                             rMan.getString("dataTables.disconnectingTitle"),
                                             JOptionPane.WARNING_MESSAGE);
             }
           }
         }
         tdat.gene.setName(newName);        
-        TimeCourseChange[] tcc = tcd.changeTimeCourseMapsToName(currName, newName);
+        TimeCourseChange[] tcc = tcdm.changeTimeCourseMapsToName(currName, newName);
         for (int i = 0; i < tcc.length; i++) {
-          support.addEdit(new TimeCourseChangeCmd(appState_, dacx_, tcc[i]));
+          support.addEdit(new TimeCourseChangeCmd(dacx_, tcc[i]));
         }
       }
     }
@@ -469,12 +476,12 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
  
   public static class StratSourceTracker extends TrackingUnit {
   
-    private List exprCol_;
-    private List srcCol_;
-    private List startStratCol_;
-    private List endStratCol_;
+    private List<EnumCell> exprCol_;
+    private List<EnumChoiceContent<ExpressionEntry.Source>> srcCol_;
+    private List<EnumCell> startStratCol_;
+    private List<EnumCell> endStratCol_;
 
-    public StratSourceTracker(List exprCol, List srcCol, List startStratCol, List endStratCol) {
+    public StratSourceTracker(List<EnumCell> exprCol, List<EnumChoiceContent<ExpressionEntry.Source>> srcCol, List<EnumCell> startStratCol, List<EnumCell> endStratCol) {
       exprCol_ = exprCol;
       srcCol_ = srcCol;
       startStratCol_ = startStratCol;
@@ -482,15 +489,15 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
     }
     
     public boolean isEnabled(int row) {      
-      int exprVal = ((EnumCell)exprCol_.get(row)).value;
-      int srcVal = ((EnumCell)srcCol_.get(row)).value;
-      int ssVal = ((EnumCell)startStratCol_.get(row)).value;
-      int esVal = ((EnumCell)endStratCol_.get(row)).value;
+      int exprVal = (exprCol_.get(row)).value;
+      ExpressionEntry.Source srcVal = srcCol_.get(row).val;
+      int ssVal = (startStratCol_.get(row)).value;
+      int esVal = (endStratCol_.get(row)).value;
       
       if ((exprVal != ExpressionEntry.EXPRESSED) &&  (exprVal != ExpressionEntry.WEAK_EXPRESSION) && (exprVal != ExpressionEntry.VARIABLE)) {
         return (false);
       }
-      if (srcVal == ExpressionEntry.NO_SOURCE_SPECIFIED) {
+      if (srcVal == ExpressionEntry.Source.NO_SOURCE_SPECIFIED) {
         return (false);
       }
       if ((ssVal == ExpressionEntry.NO_STRATEGY_SPECIFIED) && (esVal == ExpressionEntry.NO_STRATEGY_SPECIFIED)) {
@@ -514,10 +521,10 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
     JComboBox confBox;
     JTextField noteField;
     JCheckBox internalChoice;
-    HashSet goodbyeChannels_;
+    HashSet<ExpressionEntry.Source> goodbyeChannels_;
     
     TabData() {
-      goodbyeChannels_ = new HashSet();     
+      goodbyeChannels_ = new HashSet<ExpressionEntry.Source>();     
     }
   }
   
@@ -551,8 +558,8 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
       EnumCell value;
       ProtoDouble activity;   
       EnumCell confidence;
-      EnumCell source;
-      EnumCell stratSource;
+      EnumChoiceContent<ExpressionEntry.Source> source;
+      EnumChoiceContent<ExpressionEntry.Source> stratSource;
       EnumCell startStrat;
       EnumCell endStrat;
       Integer hiddenConfidence;
@@ -566,8 +573,8 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
         value = (EnumCell)columns_[VALUE].get(i);
         activity = (ProtoDouble)columns_[ACTIVITY].get(i);
         confidence = (EnumCell)columns_[CONFIDENCE].get(i);
-        source = (EnumCell)columns_[SOURCE].get(i);
-        stratSource = (EnumCell)columns_[STRAT_SOURCE].get(i);
+        source = (EnumChoiceContent<ExpressionEntry.Source>)columns_[SOURCE].get(i);
+        stratSource = (EnumChoiceContent<ExpressionEntry.Source>)columns_[STRAT_SOURCE].get(i);
         startStrat = (EnumCell)columns_[START_STRAT].get(i);
         endStrat = (EnumCell)columns_[END_STRAT].get(i);       
         hiddenConfidence = (Integer)hiddenColumns_[HIDDEN_CONFIDENCE_].get(i);
@@ -589,11 +596,11 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
       }
     }
   
-    TimeCourseTableModel(BTState appState, TabData td) {
-      super(appState, NUM_COL_);
+    TimeCourseTableModel(UIComponentSource uics, DataAccessContext dacx, TabData td) {
+      super(uics, dacx, NUM_COL_);
       tdat_ = td;
-      String displayUnits = appState_.getDB().getTimeAxisDefinition().unitDisplayString();
-      ResourceManager rMan = appState_.getRMan();
+      String displayUnits = dacx_.getExpDataSrc().getTimeAxisDefinition().unitDisplayString();
+      ResourceManager rMan = dacx_.getRMan();
       String timeColumnHeading = MessageFormat.format(rMan.getString("tcentry.timeColFormat"), new Object[] {displayUnits});
       sst_ = new StratSourceTracker(columns_[VALUE], columns_[SOURCE], columns_[START_STRAT], columns_[END_STRAT]);
 
@@ -621,8 +628,8 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
                                  EnumCell.class,
                                  ProtoDouble.class,
                                  EnumCell.class,
-                                 EnumCell.class,
-                                 EnumCell.class,
+                                 EnumChoiceContent.class,
+                                 EnumChoiceContent.class,
                                  EnumCell.class,          
                                  EnumCell.class};
       canEdit_ = new boolean[] {false,
@@ -667,7 +674,7 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
         }
 
       } catch (Exception ex) {
-        appState_.getExceptionHandler().displayException(ex);
+        uics_.getExceptionHandler().displayException(ex);
       }
       return (false);
     }
@@ -681,6 +688,8 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
         return (activityEditingDone(row, val));
       } else if (col == CONFIDENCE) {
         return (confidenceEditingDone(row, val));
+      } else if (col == SOURCE) {
+        return (sourceEditingDone(col, row, val));
       } else if ((col == SOURCE) || (col == START_STRAT) || (col == END_STRAT)) {
         return (generalEditingDone(col, row, val));
       } else {
@@ -705,6 +714,19 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
       EnumCell newAct = (EnumCell)val;   
       EnumCell currAct = (EnumCell)columns_[col].get(row);
       if (currAct.value == newAct.value) {
+        return (true);
+      }
+      // Have to get the column next door to repaint as active/inactive:
+      tmqt_.invalidate();
+      tmqt_.validate();
+      tmqt_.repaint();
+      return (true);  
+    }
+    
+    public boolean sourceEditingDone(int col, int row, Object val) {
+      EnumChoiceContent<ExpressionEntry.Source> newAct = (EnumChoiceContent<ExpressionEntry.Source>)val;   
+      EnumChoiceContent<ExpressionEntry.Source> currAct = (EnumChoiceContent<ExpressionEntry.Source>)columns_[col].get(row);
+      if (currAct.val == newAct.val) {
         return (true);
       }
       // Have to get the column next door to repaint as active/inactive:
@@ -810,7 +832,7 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
   
   private void toggleAdvanced() {
     advanced_ = !advanced_;
-    ResourceManager rMan = appState_.getRMan();
+    ResourceManager rMan = dacx_.getRMan();
     String text = rMan.getString((advanced_) ? "dialogs.collapse" : "dialogs.expand");
     buttonAdv_.setText(text);
     Iterator tdit = tabData_.values().iterator();
@@ -828,22 +850,22 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
   ** Build table rows
   */ 
   
-  private List buildTableRows(TabData tDat) {
+  private List<TimeCourseTableModel.TableRow> buildTableRows(TabData tDat) {
     TimeCourseTableModel tctm = (TimeCourseTableModel)tDat.est.getModel();
-    ArrayList retval = new ArrayList();
+    ArrayList<TimeCourseTableModel.TableRow> retval = new ArrayList<TimeCourseTableModel.TableRow>();
     
-    Iterator eeit = tDat.gene.getExpressions();
+    Iterator<ExpressionEntry> eeit = tDat.gene.getExpressions();
     while (eeit.hasNext()) {
-      ExpressionEntry entry = (ExpressionEntry)eeit.next();
+      ExpressionEntry entry = eeit.next();
       TimeCourseTableModel.TableRow tr = tctm.new TableRow();    
       Integer timeIndex = new Integer(entry.getTime());
-      tr.time = TimeAxisDefinition.getTimeDisplay(appState_, timeIndex, false, false);        
+      tr.time = TimeAxisDefinition.getTimeDisplay(dacx_, timeIndex, false, false);        
       tr.region = entry.getRegion();
       
-      int expr = entry.getExpressionForSource(ExpressionEntry.NO_SOURCE_SPECIFIED);
+      int expr = entry.getExpressionForSource(ExpressionEntry.Source.NO_SOURCE_SPECIFIED);
       int esize = expressEnum_.size();
       for (int i = 0; i < esize; i++) {
-        EnumCell ecr = (EnumCell)expressEnum_.get(i);
+        EnumCell ecr = expressEnum_.get(i);
         if (ecr.value == expr) {
           tr.value = new EnumCell(ecr);
           break;
@@ -851,15 +873,15 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
       }
       
       tr.activity = (expr == ExpressionEntry.VARIABLE) 
-        ? new ProtoDouble(entry.getVariableLevelForSource(ExpressionEntry.NO_SOURCE_SPECIFIED)) 
+        ? new ProtoDouble(entry.getVariableLevelForSource(ExpressionEntry.Source.NO_SOURCE_SPECIFIED)) 
         : new ProtoDouble("");
  
-      int source = entry.getSource();
+      ExpressionEntry.Source source = entry.getSource();
       int rsize = sourceEnum_.size();
       for (int i = 0; i < rsize; i++) {
-        EnumCell ecr = (EnumCell)sourceEnum_.get(i);
-        if (ecr.value == source) {
-          tr.source = new EnumCell(ecr);
+        EnumChoiceContent<ExpressionEntry.Source> ecr = sourceEnum_.get(i);
+        if (ecr.val == source) {
+          tr.source = new EnumChoiceContent<ExpressionEntry.Source>(ecr.name, ecr.val, i);
           break;
         }
       }
@@ -869,19 +891,19 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
       int showConf = tDat.gene.mapEntryConfidence(entryConfidence);      
       int csize = confidenceEnum_.size();
       for (int i = 0; i < csize; i++) {
-        EnumCell ecr = (EnumCell)confidenceEnum_.get(i);
+        EnumCell ecr = confidenceEnum_.get(i);
         if (ecr.value == showConf) {
           tr.confidence = new EnumCell(ecr);
           break;
         }
       }
       
-      int stratSource = entry.getStrategySource();
+      ExpressionEntry.Source stratSource = entry.getStrategySource();
       rsize = sourceEnum_.size();
       for (int i = 0; i < rsize; i++) {
-        EnumCell ecr = (EnumCell)sourceEnum_.get(i);
-        if (ecr.value == stratSource) {
-          tr.stratSource = new EnumCell(ecr);
+        EnumChoiceContent<ExpressionEntry.Source> ecr = sourceEnum_.get(i);
+        if (ecr.val == stratSource) {
+          tr.stratSource = new EnumChoiceContent<ExpressionEntry.Source>(ecr.name, ecr.val, i);
           break;
         }
       }
@@ -889,7 +911,7 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
       int startStrat = entry.getRawStartStrategy();
       int ssize = stratEnum_.size();
       for (int i = 0; i < ssize; i++) {
-        EnumCell ecr = (EnumCell)stratEnum_.get(i);
+        EnumCell ecr = stratEnum_.get(i);
         if (ecr.value == startStrat) {
           tr.startStrat = new EnumCell(ecr);
           break;
@@ -897,7 +919,7 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
       }
       int endStrat = entry.getRawEndStrategy();
       for (int i = 0; i < ssize; i++) {
-        EnumCell ecr = (EnumCell)stratEnum_.get(i);
+        EnumCell ecr = stratEnum_.get(i);
         if (ecr.value == endStrat) {
           tr.endStrat = new EnumCell(ecr);
           break;
@@ -916,9 +938,10 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
   
   private boolean applyProperties() {
     TimeCourseData tcData = dacx_.getExpDataSrc().getTimeCourseData();
-    Iterator tdit = tabData_.values().iterator();
+    TimeCourseDataMaps tcdm = dacx_.getDataMapSrc().getTimeCourseDataMaps();
+    Iterator<TabData> tdit = tabData_.values().iterator();
     while (tdit.hasNext()) {
-      TabData tdat = (TabData)tdit.next();
+      TabData tdat = tdit.next();
       if (!checkValues(tdat)) {
         return (false);
       }
@@ -926,18 +949,18 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
 
     tdit = tabData_.values().iterator();
     while (tdit.hasNext()) {
-      TabData tdat = (TabData)tdit.next();
+      TabData tdat = tdit.next();
       //
       // Undo/Redo support
       //
    
-      UndoSupport support = new UndoSupport(appState_, "undo.tcentry");
+      UndoSupport support = uFac_.provideUndoSupport("undo.tcentry", dacx_);
       if (tdat.isNew) {
-        support.addEdit(new TimeCourseChangeCmd(appState_, dacx_, tcData.addTimeCourseGene(tdat.gene)));
+        support.addEdit(new TimeCourseChangeCmd(dacx_, tcData.addTimeCourseGene(tdat.gene)));
       }
       TimeCourseChange tcc = tcData.startGeneUndoTransaction(tdat.gene.getName());
       
-      boolean ok = applyGeneData(tcData, tdat, support);
+      boolean ok = applyGeneData(tcData, tcdm, tdat, support);
       // Only time this is false is for single-shot panels, i.e. no partial
       // undo commits should occur.
       if (!ok) {
@@ -949,7 +972,7 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
       
       applyTableValues(tdat);
       tcc = tcData.finishGeneUndoTransaction(tdat.gene.getName(), tcc);
-      support.addEdit(new TimeCourseChangeCmd(appState_, dacx_, tcc));
+      support.addEdit(new TimeCourseChangeCmd(dacx_, tcc));
      
       //
       // If maps to channels are going to be left dangling by the loss of a source
@@ -957,13 +980,15 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
       //
       
       if (!tdat.goodbyeChannels_.isEmpty()) {
-        Iterator gcit = tdat.goodbyeChannels_.iterator();
+        Iterator<ExpressionEntry.Source> gcit = tdat.goodbyeChannels_.iterator();
         while (gcit.hasNext()) {
-          Integer channelObj = (Integer)gcit.next();
-          TimeCourseChange[] tccm = tcData.dropMapsToEntrySourceChannel(tdat.gene.getName(), channelObj.intValue());
+          ExpressionEntry.Source channelObj = gcit.next();
+          TimeCourseChange[] tccm = tcdm.dropMapsToEntrySourceChannel(tdat.gene.getName(), channelObj);
           for (int i = 0; i < tccm.length; i++) {
-            support.addEdit(new TimeCourseChangeCmd(appState_, dacx_, tccm[i]));
+            support.addEdit(new TimeCourseChangeCmd(dacx_, tccm[i]));
           }
+          UiUtil.fixMePrintout("do something here!!!");
+          // public ModelBuilder.Undo handleSourceChannelDeletion(String tcNodeName, int channel);         
         }   
       }
    
@@ -996,12 +1021,12 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
         continue;
       }
       if (!tr.activity.valid) {
-        DoubleEditor.triggerWarning(appState_, appState_.getTopFrame());
+        DoubleEditor.triggerWarning(uics_.getHandlerAndManagerSource(), uics_.getTopFrame());
         return (false);
       }
       if ((tr.activity.value < 0.0) || (tr.activity.value > 1.0)) {
-        ResourceManager rMan = appState_.getRMan();
-        JOptionPane.showMessageDialog(appState_.getTopFrame(), 
+        ResourceManager rMan = dacx_.getRMan();
+        JOptionPane.showMessageDialog(uics_.getTopFrame(), 
                                       rMan.getString("tcentry.badActivityValue"), 
                                       rMan.getString("tcentry.badActivityValueTitle"),
                                       JOptionPane.ERROR_MESSAGE);
@@ -1014,13 +1039,13 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
     // exist for non-edges, and a pulse cannot be on and off at the same time.
     //
 
-    Iterator eeit = tdat.gene.getExpressions();
-    ArrayList newExp = new ArrayList();
+    Iterator<ExpressionEntry> eeit = tdat.gene.getExpressions();
+    ArrayList<ExpressionEntry> newExp = new ArrayList<ExpressionEntry>();
     boolean haveFixed = false;
     boolean haveVar = false;
     int count = 0;
     while (eeit.hasNext()) {        
-      ExpressionEntry entry = (ExpressionEntry)eeit.next();
+      ExpressionEntry entry = eeit.next();
       TimeCourseTableModel.TableRow tr = (TimeCourseTableModel.TableRow)vals.get(count++); 
       ExpressionEntry ee = resolveToNewEntry(entry, tr);
       int eeVal = ee.getRawExpression();
@@ -1035,8 +1060,8 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
     }
 
     if (haveVar && haveFixed) {
-      ResourceManager rMan = appState_.getRMan();
-      JOptionPane.showMessageDialog(appState_.getTopFrame(), rMan.getString("tcentry.mixed"),
+      ResourceManager rMan = dacx_.getRMan();
+      JOptionPane.showMessageDialog(uics_.getTopFrame(), rMan.getString("tcentry.mixed"),
                                     rMan.getString("tcentry.mixedTitle"),
                                     JOptionPane.WARNING_MESSAGE);
     }
@@ -1050,21 +1075,21 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
     // of the possible states:
     //
     
-    Set sources = TimeCourseGene.getSourceOptions(newExp);
+    Set<ExpressionEntry.Source> sources = TimeCourseGene.getSourceOptions(newExp);
     if (ExpressionEntry.hasMaternalChannel(sources)) {
-      if (!checkStrategyPerChannel(newExp, ExpressionEntry.MATERNAL_SOURCE)) {
+      if (!checkStrategyPerChannel(newExp, ExpressionEntry.Source.MATERNAL_SOURCE)) {
         return (false);
       }
     }
   
     if (ExpressionEntry.hasZygoticChannel(sources)) { 
-      if (!checkStrategyPerChannel(newExp, ExpressionEntry.ZYGOTIC_SOURCE)) {
+      if (!checkStrategyPerChannel(newExp, ExpressionEntry.Source.ZYGOTIC_SOURCE)) {
         return (false);
       }
     }
     
     if (ExpressionEntry.hasNoSourceChannel(sources)) { 
-      if (!checkStrategyPerChannel(newExp, ExpressionEntry.NO_SOURCE_SPECIFIED)) {
+      if (!checkStrategyPerChannel(newExp, ExpressionEntry.Source.NO_SOURCE_SPECIFIED)) {
         return (false);
       }
     }
@@ -1077,26 +1102,26 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
     //
      
     tdat.goodbyeChannels_.clear();
-    Set sourceOptions = tdat.gene.getSourceOptions();
+    Set<ExpressionEntry.Source> sourceOptions = tdat.gene.getSourceOptions();
     boolean maternalExists = ExpressionEntry.hasMaternalChannel(sourceOptions);
     boolean zygoticExists = ExpressionEntry.hasZygoticChannel(sourceOptions);
-    Set newsOpts = TimeCourseGene.getSourceOptions(newExp);
+    Set<ExpressionEntry.Source> newsOpts = TimeCourseGene.getSourceOptions(newExp);
     boolean maternalExistsNew = ExpressionEntry.hasMaternalChannel(newsOpts);
     boolean zygoticExistsNew = ExpressionEntry.hasZygoticChannel(newsOpts);
-    TimeCourseData tcData = dacx_.getExpDataSrc().getTimeCourseData();
+    TimeCourseDataMaps tcdm = dacx_.getDataMapSrc().getTimeCourseDataMaps();
     if ((maternalExists || zygoticExists) && !(maternalExistsNew || zygoticExistsNew)) {
-      if (tcData.haveMapsToEntrySourceChannel(tdat.gene.getName(), ExpressionEntry.MATERNAL_SOURCE)) {
-        tdat.goodbyeChannels_.add(new Integer(ExpressionEntry.MATERNAL_SOURCE));
+      if (tcdm.haveMapsToEntrySourceChannel(tdat.gene.getName(), ExpressionEntry.Source.MATERNAL_SOURCE)) {
+        tdat.goodbyeChannels_.add(ExpressionEntry.Source.MATERNAL_SOURCE);
       }
-      if (tcData.haveMapsToEntrySourceChannel(tdat.gene.getName(), ExpressionEntry.ZYGOTIC_SOURCE)) {
-        tdat.goodbyeChannels_.add(new Integer(ExpressionEntry.ZYGOTIC_SOURCE));
+      if (tcdm.haveMapsToEntrySourceChannel(tdat.gene.getName(), ExpressionEntry.Source.ZYGOTIC_SOURCE)) {
+        tdat.goodbyeChannels_.add(ExpressionEntry.Source.ZYGOTIC_SOURCE);
       }      
     }
     
     if (!tdat.goodbyeChannels_.isEmpty()) {
-      ResourceManager rMan = appState_.getRMan();
+      ResourceManager rMan = dacx_.getRMan();
       int ok = 
-        JOptionPane.showConfirmDialog(appState_.getTopFrame(), rMan.getString("tcentry.channelMapLoss"),
+        JOptionPane.showConfirmDialog(uics_.getTopFrame(), rMan.getString("tcentry.channelMapLoss"),
                                       rMan.getString("tcentry.channelMapLossTitle"),
                                       JOptionPane.YES_NO_OPTION);
       if (ok != JOptionPane.YES_OPTION) {
@@ -1115,37 +1140,37 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
 
     int startStrat;
     int endStrat;
-    int exprSource;
-    int stratSource;
+    ExpressionEntry.Source exprSource;
+    ExpressionEntry.Source stratSource;
     double varLev;
     
     if (tr.value.value == ExpressionEntry.VARIABLE) {
       varLev = tr.activity.value;
-      exprSource = tr.source.value;
-      stratSource = ExpressionEntry.NO_SOURCE_SPECIFIED;
+      exprSource = tr.source.val;
+      stratSource = ExpressionEntry.Source.NO_SOURCE_SPECIFIED;
       startStrat = ExpressionEntry.NO_STRATEGY_SPECIFIED;   
       endStrat = ExpressionEntry.NO_STRATEGY_SPECIFIED;   
     } else if (tr.value.value == ExpressionEntry.NO_DATA) {
       varLev = 0.0;
-      exprSource = ExpressionEntry.NO_SOURCE_SPECIFIED;
-      stratSource = ExpressionEntry.NO_SOURCE_SPECIFIED;
+      exprSource = ExpressionEntry.Source.NO_SOURCE_SPECIFIED;
+      stratSource = ExpressionEntry.Source.NO_SOURCE_SPECIFIED;
       startStrat = ExpressionEntry.NO_STRATEGY_SPECIFIED;   
       endStrat = ExpressionEntry.NO_STRATEGY_SPECIFIED;   
     } else if ((tr.value.value == ExpressionEntry.EXPRESSED) ||
                (tr.value.value == ExpressionEntry.WEAK_EXPRESSION)) {
       varLev = 0.0;
-      exprSource = tr.source.value;
+      exprSource = tr.source.val;
       startStrat = tr.startStrat.value;
       endStrat = tr.endStrat.value;        
       if ((startStrat != ExpressionEntry.NO_STRATEGY_SPECIFIED) || (endStrat != ExpressionEntry.NO_STRATEGY_SPECIFIED)) {
-        stratSource = tr.stratSource.value;
+        stratSource = tr.stratSource.val;
       } else {
-        stratSource = ExpressionEntry.NO_SOURCE_SPECIFIED;
+        stratSource = ExpressionEntry.Source.NO_SOURCE_SPECIFIED;
       }
     } else if (tr.value.value == ExpressionEntry.NOT_EXPRESSED) {
       varLev = 0.0;
-      exprSource = ExpressionEntry.NO_SOURCE_SPECIFIED;
-      stratSource = ExpressionEntry.NO_SOURCE_SPECIFIED;
+      exprSource = ExpressionEntry.Source.NO_SOURCE_SPECIFIED;
+      stratSource = ExpressionEntry.Source.NO_SOURCE_SPECIFIED;
       startStrat = ExpressionEntry.NO_STRATEGY_SPECIFIED;   
       endStrat = ExpressionEntry.NO_STRATEGY_SPECIFIED;         
     } else {
@@ -1162,41 +1187,41 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
   ** Check strategy source consistency:
   */ 
   
-  private boolean checkStrategySourceMatch(ArrayList newExp) { 
-    Iterator eeit = newExp.iterator();
+  private boolean checkStrategySourceMatch(ArrayList<ExpressionEntry> newExp) { 
+    Iterator<ExpressionEntry> eeit = newExp.iterator();
     boolean badNews = false;
     while (eeit.hasNext()) {
-      ExpressionEntry entry = (ExpressionEntry)eeit.next();
-      int src = entry.getSource();
-      int stratSrc = entry.getStrategySource();
+      ExpressionEntry entry = eeit.next();
+      ExpressionEntry.Source src = entry.getSource();
+      ExpressionEntry.Source stratSrc = entry.getStrategySource();
       int rawStart = entry.getRawStartStrategy();
       int rawEnd = entry.getRawEndStrategy();
       boolean gotStrat = ((rawStart != ExpressionEntry.NO_STRATEGY_SPECIFIED) || (rawEnd != ExpressionEntry.NO_STRATEGY_SPECIFIED));
       if (!gotStrat) {
-        if (stratSrc != ExpressionEntry.NO_SOURCE_SPECIFIED) {
+        if (stratSrc != ExpressionEntry.Source.NO_SOURCE_SPECIFIED) {
           badNews = true;
           break;
         } else {
           continue;
         }
       }
-      if (src == ExpressionEntry.NO_SOURCE_SPECIFIED) {
-        if (stratSrc != ExpressionEntry.NO_SOURCE_SPECIFIED) {
+      if (src == ExpressionEntry.Source.NO_SOURCE_SPECIFIED) {
+        if (stratSrc != ExpressionEntry.Source.NO_SOURCE_SPECIFIED) {
           badNews = true;
           break;
         }
-      } else if (src == ExpressionEntry.MATERNAL_SOURCE) {
-        if (stratSrc != ExpressionEntry.MATERNAL_SOURCE) {
+      } else if (src == ExpressionEntry.Source.MATERNAL_SOURCE) {
+        if (stratSrc != ExpressionEntry.Source.MATERNAL_SOURCE) {
           badNews = true;
           break;
         }       
-      } else if (src == ExpressionEntry.ZYGOTIC_SOURCE) {
-        if (stratSrc != ExpressionEntry.ZYGOTIC_SOURCE) {
+      } else if (src == ExpressionEntry.Source.ZYGOTIC_SOURCE) {
+        if (stratSrc != ExpressionEntry.Source.ZYGOTIC_SOURCE) {
           badNews = true;
           break;
         }              
-      } else if (src == ExpressionEntry.MATERNAL_AND_ZYGOTIC) {
-        if ((stratSrc != ExpressionEntry.ZYGOTIC_SOURCE) && (stratSrc != ExpressionEntry.MATERNAL_SOURCE)) {
+      } else if (src == ExpressionEntry.Source.MATERNAL_AND_ZYGOTIC) {
+        if ((stratSrc != ExpressionEntry.Source.ZYGOTIC_SOURCE) && (stratSrc != ExpressionEntry.Source.MATERNAL_SOURCE)) {
           badNews = true;
           break;
         }
@@ -1206,8 +1231,8 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
     }
   
     if (badNews) {
-      ResourceManager rMan = appState_.getRMan();
-      JOptionPane.showMessageDialog(appState_.getTopFrame(), rMan.getString("tcentry.badStrategySource"),
+      ResourceManager rMan = dacx_.getRMan();
+      JOptionPane.showMessageDialog(uics_.getTopFrame(), rMan.getString("tcentry.badStrategySource"),
                                     rMan.getString("tcentry.badStrategySourceTitle"),
                                     JOptionPane.ERROR_MESSAGE);
       return (false);
@@ -1220,14 +1245,14 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
   ** Check edge strategy on a per-channel basis:
   */ 
   
-  private boolean checkStrategyPerChannel(ArrayList newExp, int exprSource) {
-    HashMap lastEntryStates = new HashMap();   
-    Iterator eeit = newExp.iterator();
+  private boolean checkStrategyPerChannel(ArrayList<ExpressionEntry> newExp, ExpressionEntry.Source exprSource) {
+    HashMap<String, Integer> lastEntryStates = new HashMap<String, Integer>();   
+    Iterator<ExpressionEntry> eeit = newExp.iterator();
     while (eeit.hasNext()) {
-      ExpressionEntry entry = (ExpressionEntry)eeit.next();
+      ExpressionEntry entry = eeit.next();
       if (TimeCourseGene.strategyProblems(entry, exprSource, newExp.iterator(), lastEntryStates)) {
-        ResourceManager rMan = appState_.getRMan();
-        JOptionPane.showMessageDialog(appState_.getTopFrame(), rMan.getString("tcentry.badStrategy"),
+        ResourceManager rMan = dacx_.getRMan();
+        JOptionPane.showMessageDialog(uics_.getTopFrame(), rMan.getString("tcentry.badStrategy"),
                                       rMan.getString("tcentry.badStrategyTitle"),
                                       JOptionPane.ERROR_MESSAGE);
         return (false);
@@ -1252,9 +1277,9 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
     }
     
     int count = 0;
-    Iterator eeit = tdat.gene.getExpressions();
+    Iterator<ExpressionEntry> eeit = tdat.gene.getExpressions();
     while (eeit.hasNext()) {        
-      ExpressionEntry entry = (ExpressionEntry)eeit.next();
+      ExpressionEntry entry = eeit.next();
       TimeCourseTableModel.TableRow tr = (TimeCourseTableModel.TableRow)vals.get(count++); 
       ExpressionEntry ee = resolveToNewEntry(entry, tr);
       entry.copyInto(ee);
@@ -1268,8 +1293,8 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
   ** 
   */
   
-  private ArrayList buildConfidenceEnum() { 
-    ArrayList retval = new ArrayList();
+  private ArrayList<EnumCell> buildConfidenceEnum() { 
+    ArrayList<EnumCell> retval = new ArrayList<EnumCell>();
     int numItems = TimeCourseGene.NUM_CONFIDENCE;
     for (int i = 0; i < numItems; i++) {
       String conf = TimeCourseGene.mapConfidence(i);
@@ -1284,8 +1309,8 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
   ** 
   */
   
-  private Vector buildConfidenceChoices() { 
-    Vector retval = new Vector();
+  private Vector<ChoiceContent> buildConfidenceChoices() { 
+    Vector<ChoiceContent> retval = new Vector<ChoiceContent>();
     int numItems = TimeCourseGene.NUM_CONFIDENCE;
     for (int i = 0; i < numItems; i++) {
       String conf = TimeCourseGene.mapConfidence(i);
@@ -1299,8 +1324,8 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
   ** Build Expressions
   */
   
-  private ArrayList buildExpressionEnum() { 
-    ArrayList retval = new ArrayList();
+  private ArrayList<EnumCell> buildExpressionEnum() { 
+    ArrayList<EnumCell> retval = new ArrayList<EnumCell>();
     int numItems = ExpressionEntry.NUM_EXPRESSIONS;
     for (int i = 0; i < numItems; i++) {
       String expr = ExpressionEntry.mapExpression(i);
@@ -1314,18 +1339,18 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
   ** Build Sources
   */
   
-  private ArrayList buildSourceEnum() { 
-    ArrayList retval = new ArrayList();
-    ResourceManager rMan = appState_.getRMan(); 
+  private ArrayList<EnumChoiceContent<ExpressionEntry.Source>> buildSourceEnum() { 
+    ArrayList<EnumChoiceContent<ExpressionEntry.Source>> retval = new ArrayList<EnumChoiceContent<ExpressionEntry.Source>>();
+    ResourceManager rMan = dacx_.getRMan(); 
     StringBuffer buf = new StringBuffer();
-    int numItems = ExpressionEntry.NUM_SOURCES;
-    for (int i = 0; i < numItems; i++) {    
+    ExpressionEntry.Source[] vals = ExpressionEntry.Source.values();
+    for (int i = 0; i < vals.length; i++) {    
       buf.setLength(0);
       buf.append("tcSourceOpt.");
-      String srcTag = ExpressionEntry.mapToSourceTag(i);
+      String srcTag = ExpressionEntry.mapToSourceTag(vals[i]);
       buf.append(srcTag);
       String fullTag = rMan.getString(buf.toString());
-      retval.add(new EnumCell(fullTag, fullTag, i, i));
+      retval.add(new EnumChoiceContent<ExpressionEntry.Source>(fullTag, vals[i], i));
     }
     return (retval);
   }
@@ -1335,9 +1360,9 @@ public class TimeCourseEntryDialog extends JDialog implements DialogSupport.Dial
   ** Build Strategies
   */
   
-  private ArrayList buildStrategyEnum() { 
-    ArrayList retval = new ArrayList();
-    ResourceManager rMan = appState_.getRMan(); 
+  private ArrayList<EnumCell> buildStrategyEnum() { 
+    ArrayList<EnumCell> retval = new ArrayList<EnumCell>();
+    ResourceManager rMan = dacx_.getRMan(); 
     StringBuffer buf = new StringBuffer();
     int numItems = ExpressionEntry.NUM_STRATEGIES;
     for (int i = 0; i < numItems; i++) {
